--- a/Services/Catalog.API/appsettings.json
+++ b/Services/Catalog.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CatalogDbConnection": "mongodb://localhost:27017/"
+  }
 }
