--- a/Services/Catalog.API/appsettings.json
+++ b/Services/Catalog.API/appsettings.json
@@ -6,7 +6,20 @@
     }
   },
   "AllowedHosts": "*",
+  "ApiConfiguration": {
+    "ApiVersions": [
+      {
+        "Name": "Catalog API",
+        "Version": "v1"
+      }
+    ],
+    "ApiContact": {
+      "Name": "Eduardo Dörr",
+      "Email": "adm.eduardodorr@gmail.com",
+      "Url": "https://github.com/EduardoDorr"
+    }
+  },
   "ConnectionStrings": {
-    "CatalogDbConnection": "mongodb://localhost:27017/"
+    "CatalogDbConnection": "mongodb://localhost:27018/"
   }
 }
