✨ Coreography of order api and catalog api

--- a/Services/src/Catalog.API/appsettings.json
+++ b/Services/src/Catalog.API/appsettings.json
@@ -22,6 +22,12 @@
   "ConnectionStrings": {
     "CatalogDbConnection": "mongodb://localhost:27018/"
   },
+  "RabbitMqConfiguration": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest"
+  },
   "ImageValidation": {
     "FolderPath": "products"
   }
