--- a/Services/src/Order.API/KubeFood.Order.API.csproj
+++ b/Services/src/Order.API/KubeFood.Order.API.csproj
@@ -28,4 +28,8 @@
     <ProjectReference Include="..\Core\KubeFood.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Infrastructure\Persistence\Migrations\" />
+  </ItemGroup>
+
 </Project>
