--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
         RABBITMQ_DEFAULT_PASS: guest
       volumes:
         - rabbitmq-data:/var/lib/rabbitmq
+      healthcheck:
+        test: ["CMD", "rabbitmqctl", "status"]
+        interval: 10s
+        timeout: 5s
+        retries: 5
       networks:
           - app-network
 
@@ -61,7 +66,8 @@ services:
             - ASPNETCORE_HTTPS_PORTS=8081
             - ASPNETCORE_Kestrel__Certificates__Default__Password=MyPassword123
             - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-            - ConnectionStrings__CatalogDbConnection=catalogdb://catalogdb:27017
+            - ConnectionStrings__CatalogDbConnection=mongodb://catalogdb:27017
+            - RabbitMqConfiguration__HostName=rabbitmq
         ports:
             - "3000:8080"
             - "3030:8081"
@@ -69,6 +75,8 @@ services:
             - ./Services/aspnetapp.pfx:/https/aspnetapp.pfx:ro
         depends_on:
           catalogdb:
+            condition: service_healthy
+          rabbitmq:
             condition: service_healthy
         networks:
             - app-network
@@ -85,7 +93,8 @@ services:
             - ASPNETCORE_HTTPS_PORTS=8081
             - ASPNETCORE_Kestrel__Certificates__Default__Password=MyPassword123
             - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-            - ConnectionStrings__CatalogDbConnection=Server=orderdb;Database=orderdb;Uid=admin;Pwd=admin;
+            - ConnectionStrings__OrderDbConnection=Server=orderdb;Database=orderdb;Uid=admin;Pwd=admin;SslMode=None;
+            - RabbitMqConfiguration__HostName=rabbitmq
         ports:
             - "3001:8080"
             - "3031:8081"
@@ -93,6 +102,8 @@ services:
             - ./Services/aspnetapp.pfx:/https/aspnetapp.pfx:ro
         depends_on:
           orderdb:
+            condition: service_healthy
+          rabbitmq:
             condition: service_healthy
         networks:
             - app-network
