--- a/Services/src/Inventory.API/appsettings.json
+++ b/Services/src/Inventory.API/appsettings.json
@@ -5,5 +5,27 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApiConfiguration": {
+    "ApiVersions": [
+      {
+        "Name": "Inventory API",
+        "Version": "v1"
+      }
+    ],
+    "ApiContact": {
+      "Name": "Eduardo Dörr",
+      "Email": "adm.eduardodorr@gmail.com",
+      "Url": "https://github.com/EduardoDorr"
+    }
+  },
+  "ConnectionStrings": {
+    "InventoryDbConnection": "Server=localhost,1433;Database=inventorydb;User Id=sa;Password=admin123;Trusted_Connection=True;"
+  },
+  "RabbitMqConfiguration": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest"
+  }
 }
