✨ Adding more things

--- a/Services/src/Catalog.API/appsettings.json
+++ b/Services/src/Catalog.API/appsettings.json
@@ -5,6 +5,32 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Seq", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341",
+          "apiKey": "xjcOySZu1EsMP963uhCX"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
   "AllowedHosts": "*",
   "ApiConfiguration": {
     "ApiVersions": [
@@ -22,10 +48,23 @@
   "ConnectionStrings": {
     "CatalogDbConnection": "mongodb://localhost:27018/"
   },
+  "OpenTelemetryConfiguration": {
+    "OtlpEndpoint": "http://localhost:4317"
+  },
   "RabbitMqConfiguration": {
     "HostName": "localhost",
     "Port": 5672,
     "UserName": "guest",
     "Password": "guest"
+  },
+  "OutboxMessageConfiguration": {
+    "RetryLimit": 5,
+    "BatchSize": 20,
+    "ProcessIntervalInSeconds": 10
+  },
+  "InboxMessageConfiguration": {
+    "RetryLimit": 5,
+    "BatchSize": 20,
+    "ProcessIntervalInSeconds": 5
   }
 }
