--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,167 +1,200 @@
 services:
-    rabbitmq:
-      image: rabbitmq:3-management
-      container_name: rabbitmq
+  seq:
+    image: datalust/seq:latest
+    container_name: seq
+    restart: unless-stopped
+    ports:
+      - "5341:80"
+    environment:
+      - ACCEPT_EULA=Y
+      - SEQ_FIRSTRUN_ADMINPASSWORD=Admin123
+    volumes:
+      - seq-data:/data
+    networks:
+      - app-network
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    container_name: jaeger
+    ports:
+      - "16686:16686"   # UI Web
+      - "6831:6831/udp" # UDP compact protocol (agent)
+      - "6832:6832/udp" # UDP binary protocol (agent)
+      - "5778:5778"     # Configuração remota (agent)
+      - "4317:4317"     # OTLP gRPC (collector)
+      - "4318:4318"     # OTLP HTTP (collector)
+      - "14250:14250"   # gRPC
+      - "14268:14268"   # HTTP / collector
+      - "14269:14269"   # health check
+    environment:
+      COLLECTOR_ZIPKIN_HTTP_PORT: 9411
+    networks:
+      - app-network
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    volumes:
+      - rabbitmq-data:/var/lib/rabbitmq
+    networks:
+        - app-network
+
+  catalogdb:
+      image: mongo:latest
+      container_name: catalogdb
       ports:
-        - "5672:5672"
-        - "15672:15672"
-      environment:
-        RABBITMQ_DEFAULT_USER: guest
-        RABBITMQ_DEFAULT_PASS: guest
+          - "27018:27017"
+      restart: always
       healthcheck:
-        test: ["CMD", "rabbitmqctl", "status"]
+        test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
         interval: 10s
-        timeout: 5s
+        timeout: 3s
         retries: 5
       volumes:
-        - rabbitmq-data:/var/lib/rabbitmq
+          - ./data/db:/data/db
+      networks:
+          - app-network
+  
+  orderdb:
+    image: mysql:8.0.41
+    container_name: orderdb
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: orderdb
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: Admin123
+    ports:
+      - "3307:3306"
+    restart: always
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uadmin", "-padmin"]
+      interval: 10s
+      retries: 5
+      start_period: 20s
+    volumes:
+      - mysql-data:/var/lib/mysql
+    networks:
+      - app-network
+
+  inventorydb:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: inventorydb
+    environment:
+      ACCEPT_EULA: 'Y'
+      MSSQL_SA_PASSWORD: 'Admin123'
+      MSSQL_PID: 'Developer'
+    ports:
+      - "1434:1433"
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pgrep sqlservr > /dev/null || exit 1"]
+      interval: 10s
+      retries: 10
+      start_period: 10s
+      timeout: 3s
+    volumes:
+      - mssql_data:/var/opt/mssql
+    networks:
+      - app-network
+
+  catalogapi:
+      image: catalogapi
+      container_name: catalogapi
+      build:
+        context: ./Services/src
+        dockerfile: ./Catalog.Api/Dockerfile
+      environment:
+          - ASPNETCORE_ENVIRONMENT=Development
+          - ASPNETCORE_HTTP_PORTS=8080
+          - ASPNETCORE_HTTPS_PORTS=8081
+          - ASPNETCORE_Kestrel__Certificates__Default__Password=MyPassword123
+          - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+          - ConnectionStrings__CatalogDbConnection=mongodb://catalogdb:27017
+          - RabbitMqConfiguration__HostName=rabbitmq
+      ports:
+          - "3000:8080"
+          - "3030:8081"
+      volumes:
+          - ./Services/aspnetapp.pfx:/https/aspnetapp.pfx:ro
+      depends_on:
+        catalogdb:
+          condition: service_healthy
+        rabbitmq:
+          condition: service_healthy
       networks:
           - app-network
 
-    catalogdb:
-        image: mongo:latest
-        container_name: catalogdb
-        ports:
-            - "27018:27017"
-        restart: always
-        healthcheck:
-          test: ["CMD", "mongosh", "--eval", "db.adminCommand('ping')"]
-          interval: 10s
-          timeout: 3s
-          retries: 5
-        volumes:
-            - ./data/db:/data/db
-        networks:
-            - app-network
-    
-    orderdb:
-      image: mysql:8.0.41
-      container_name: orderdb
+  orderapi:
+      image: orderapi
+      container_name: orderapi
+      build:
+        context: ./Services/src
+        dockerfile: ./Order.Api/Dockerfile
       environment:
-        MYSQL_ROOT_PASSWORD: root
-        MYSQL_DATABASE: orderdb
-        MYSQL_USER: admin
-        MYSQL_PASSWORD: Admin123
+          - ASPNETCORE_ENVIRONMENT=Development
+          - ASPNETCORE_HTTP_PORTS=8080
+          - ASPNETCORE_HTTPS_PORTS=8081
+          - ASPNETCORE_Kestrel__Certificates__Default__Password=MyPassword123
+          - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+          - ConnectionStrings__OrderDbConnection=Server=orderdb;Database=orderdb;Uid=admin;Pwd=Admin123;AllowPublicKeyRetrieval=True;SslMode=None;
+          - RabbitMqConfiguration__HostName=rabbitmq
       ports:
-        - "3307:3306"
-      restart: always
-      healthcheck:
-        test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-uadmin", "-padmin"]
-        interval: 10s
-        retries: 5
-        start_period: 20s
+          - "3001:8080"
+          - "3031:8081"
       volumes:
-        - mysql-data:/var/lib/mysql
+          - ./Services/aspnetapp.pfx:/https/aspnetapp.pfx:ro
+      depends_on:
+        orderdb:
+          condition: service_healthy
+        rabbitmq:
+          condition: service_healthy
       networks:
-        - app-network
+          - app-network
 
-    inventorydb:
-      image: mcr.microsoft.com/mssql/server:2022-latest
-      container_name: inventorydb
+  inventoryapi:
+      image: inventoryapi
+      container_name: inventoryapi
+      build:
+        context: ./Services/src
+        dockerfile: ./Inventory.Api/Dockerfile
       environment:
-        ACCEPT_EULA: 'Y'
-        MSSQL_SA_PASSWORD: 'Admin123'
-        MSSQL_PID: 'Developer'
+          - ASPNETCORE_ENVIRONMENT=Development
+          - ASPNETCORE_HTTP_PORTS=8080
+          - ASPNETCORE_HTTPS_PORTS=8081
+          - ASPNETCORE_Kestrel__Certificates__Default__Password=MyPassword123
+          - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
+          - ConnectionStrings__InventoryDbConnection=Server=inventorydb;Database=inventorydb;User Id=sa;Password=Admin123;TrustServerCertificate=True;
+          - RabbitMqConfiguration__HostName=rabbitmq
       ports:
-        - "1434:1433"
-      restart: always
-      healthcheck:
-        test: ["CMD-SHELL", "pgrep sqlservr > /dev/null || exit 1"]
-        interval: 10s
-        retries: 10
-        start_period: 10s
-        timeout: 3s
+          - "3002:8080"
+          - "3032:8081"
       volumes:
-        - mssql_data:/var/opt/mssql
+          - ./Services/aspnetapp.pfx:/https/aspnetapp.pfx:ro
+      depends_on:
+        inventorydb:
+          condition: service_healthy
+        rabbitmq:
+          condition: service_healthy
       networks:
-        - app-network
-
-    catalogapi:
-        image: catalogapi
-        container_name: catalogapi
-        build:
-          context: ./Services/src
-          dockerfile: ./Catalog.Api/Dockerfile
-        environment:
-            - ASPNETCORE_ENVIRONMENT=Development
-            - ASPNETCORE_HTTP_PORTS=8080
-            - ASPNETCORE_HTTPS_PORTS=8081
-            - ASPNETCORE_Kestrel__Certificates__Default__Password=MyPassword123
-            - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-            - ConnectionStrings__CatalogDbConnection=mongodb://catalogdb:27017
-            - RabbitMqConfiguration__HostName=rabbitmq
-        ports:
-            - "3000:8080"
-            - "3030:8081"
-        volumes:
-            - ./Services/aspnetapp.pfx:/https/aspnetapp.pfx:ro
-        depends_on:
-          catalogdb:
-            condition: service_healthy
-          rabbitmq:
-            condition: service_healthy
-        networks:
-            - app-network
-
-    orderapi:
-        image: orderapi
-        container_name: orderapi
-        build:
-          context: ./Services/src
-          dockerfile: ./Order.Api/Dockerfile
-        environment:
-            - ASPNETCORE_ENVIRONMENT=Development
-            - ASPNETCORE_HTTP_PORTS=8080
-            - ASPNETCORE_HTTPS_PORTS=8081
-            - ASPNETCORE_Kestrel__Certificates__Default__Password=MyPassword123
-            - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-            - ConnectionStrings__OrderDbConnection=Server=orderdb;Database=orderdb;Uid=admin;Pwd=Admin123;AllowPublicKeyRetrieval=True;SslMode=None;
-            - RabbitMqConfiguration__HostName=rabbitmq
-        ports:
-            - "3001:8080"
-            - "3031:8081"
-        volumes:
-            - ./Services/aspnetapp.pfx:/https/aspnetapp.pfx:ro
-        depends_on:
-          orderdb:
-            condition: service_healthy
-          rabbitmq:
-            condition: service_healthy
-        networks:
-            - app-network
-
-    inventoryapi:
-        image: inventoryapi
-        container_name: inventoryapi
-        build:
-          context: ./Services/src
-          dockerfile: ./Inventory.Api/Dockerfile
-        environment:
-            - ASPNETCORE_ENVIRONMENT=Development
-            - ASPNETCORE_HTTP_PORTS=8080
-            - ASPNETCORE_HTTPS_PORTS=8081
-            - ASPNETCORE_Kestrel__Certificates__Default__Password=MyPassword123
-            - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/aspnetapp.pfx
-            - ConnectionStrings__InventoryDbConnection=Server=inventorydb;Database=inventorydb;User Id=sa;Password=Admin123;TrustServerCertificate=True;
-            - RabbitMqConfiguration__HostName=rabbitmq
-        ports:
-            - "3002:8080"
-            - "3032:8081"
-        volumes:
-            - ./Services/aspnetapp.pfx:/https/aspnetapp.pfx:ro
-        depends_on:
-          inventorydb:
-            condition: service_healthy
-          rabbitmq:
-            condition: service_healthy
-        networks:
-            - app-network
+          - app-network
 
 networks:
   app-network:
     driver: bridge
 
 volumes:
+  seq-data:
   rabbitmq-data:
   mysql-data:
     driver: local
