--- a/Services/src/Delivery.Worker/appsettings.json
+++ b/Services/src/Delivery.Worker/appsettings.json
@@ -4,5 +4,53 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Seq", "Serilog.Sinks.Console" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "[{Timestamp:HH:mm:ss} {Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Seq",
+        "Args": {
+          "serverUrl": "http://localhost:5341",
+          "apiKey": "tqiLnj3skblurBmUnJHk"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
+  },
+  "ConnectionStrings": {
+    "WorkerDbConnection": "mongodb://localhost:27018/"
+  },
+  "OpenTelemetryConfiguration": {
+    "OtlpEndpoint": "http://localhost:4317"
+  },
+  "RabbitMqConfiguration": {
+    "HostName": "localhost",
+    "Port": 5672,
+    "UserName": "guest",
+    "Password": "guest"
+  },
+  "OutboxMessageConfiguration": {
+    "RetryLimit": 5,
+    "BatchSize": 20,
+    "ProcessIntervalInSeconds": 10
+  },
+  "InboxMessageConfiguration": {
+    "RetryLimit": 5,
+    "BatchSize": 20,
+    "ProcessIntervalInSeconds": 5
   }
 }
