--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -17,7 +17,7 @@ on:
         type: string
 
 env:
-  REGISTRY: ${{ secrets.AZURE_CONTAINER_REGISTRY }}
+  REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
 
 jobs:
   build-and-push:
@@ -27,17 +27,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Login Azure
-        uses: azure/login@v1
+      - name: Login no Docker Hub
+        uses: docker/login-action@v2
         with:
-          creds: ${{ secrets.AZURE_CREDS }}
-
-      - name: Azure Container Registry Login
-        uses: azure/docker-login@v1
-        with:
-          login-server: ${{ env.REGISTRY }}
-          username: ${{ secrets.AZURE_CLIENT_ID }}
-          password: ${{ secrets.AZURE_CLIENT_SECRET }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and Push Image
         run: |
