--- a/Services/src/Delivery.Worker/appsettings.json
+++ b/Services/src/Delivery.Worker/appsettings.json
@@ -37,6 +37,9 @@
   "OpenTelemetryConfiguration": {
     "OtlpEndpoint": "http://localhost:4317"
   },
+  "MessageBusProvider": {
+    "Provider": "RabbitMq"
+  },
   "RabbitMqConfiguration": {
     "HostName": "localhost",
     "Port": 5672,
