--- a/Services/src/Inventory.API/appsettings.json
+++ b/Services/src/Inventory.API/appsettings.json
@@ -51,6 +51,9 @@
   "OpenTelemetryConfiguration": {
     "OtlpEndpoint": "http://localhost:4317"
   },
+  "MessageBusProvider": {
+    "Provider": "RabbitMq"
+  },
   "RabbitMqConfiguration": {
     "HostName": "localhost",
     "Port": 5672,
